--- a/compose.yaml
+++ b/compose.yaml
@@ -4,12 +4,14 @@ services:
   postgres:
     container_name: postgrescontainer
     image: 'postgres:latest'
-    restart: always
+#    restart: always
     volumes:
       - postgresvolume:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
     expose:
       - 5432
     ports:
