--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,50 @@
+logging:
+  level:
+    ROOT: INFO
+    org.hibernate.SQL: DEBUG
+    com.yvolabs.airbnbclone: DEBUG
+
+server:
+  port: 8080
+
 spring:
+  profiles:
+    active: dev
   application:
     name: airbnb-clone-server
+  datasource:
+    url: jdbc:postgresql://${POSTGRES_URL}:5432/${POSTGRES_DB}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        default_schema: airbnb_clone
+  data:
+    jpa:
+      repositories:
+        bootstrap-mode: deferred
+  liquibase:
+    contexts: dev
+    change-log: classpath:db/changelog/master.xml
+    default-schema: airbnb_clone
+    enabled: true
+    #drop-first: true
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 100MB
+      max-request-size: 100MB
+
+#okta:
+#  oauth2:
+#    issuer: https://airbnb-clone.us.auth0.com/
+#    client-id: ${AUTH0_CLIENT_ID}
+#    client-secret: ${AUTH0_CLIENT_SECRET}
+
+application:
+  auth0:
+    role-landlord-id: rol_v1CpFU8josLg8YjC
