add app entities, repositories and mappers, add h2 db for test

--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,15 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-                <dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -128,9 +133,22 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.28</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <configuration>
+                    <changeLogFile>
+                        src/test/resources/db/changelog/master_test.xml
+                    </changeLogFile>
+                    <driver>org.h2.Driver</driver>
+                    <url>jdbc:h2:mem:airbnb_clone</url>
+                    <username>sa</username>
+                    <password>password</password>
                 </configuration>
             </plugin>
         </plugins>
