--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,12 +39,12 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
 
-#okta:
-#  oauth2:
-#    issuer: https://airbnb-clone.us.auth0.com/
-#    client-id: ${AUTH0_CLIENT_ID}
-#    client-secret: ${AUTH0_CLIENT_SECRET}
+okta:
+  oauth2:
+    issuer: https://dev-71j6hnsowklnt5gy.us.auth0.com/
+    client-id: ${AUTH0_CLIENT_ID}
+    client-secret: ${AUTH0_CLIENT_SECRET}
 
 application:
   auth0:
-    role-landlord-id: rol_v1CpFU8josLg8YjC
+    role-landlord-id: ${ROLE_LANDLORD_ID}
