--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -21,3 +21,10 @@ spring:
     properties:
       hibernate:
         default_schema: airbnb_clone
+
+okta:
+  oauth2:
+    issuer: https://someurl.com/
+    client-id: some_client_id
+    client-secret: some_client_secret
+
