fix mapstruct mapping bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 logging:
   level:
     ROOT: INFO
-    org.hibernate.SQL: DEBUG
+#    org.hibernate.SQL: DEBUG
+    org.hibernate.SQL: error
     com.yvolabs.airbnbclone: DEBUG
 
 server:
@@ -44,6 +45,7 @@ okta:
     issuer: https://dev-71j6hnsowklnt5gy.us.auth0.com/
     client-id: ${AUTH0_CLIENT_ID}
     client-secret: ${AUTH0_CLIENT_SECRET}
+    audience: https://dev-71j6hnsowklnt5gy.us.auth0.com/api/v2/
 
 application:
   auth0:
